--- a/app/index.html
+++ b/app/index.html
@@ -130,6 +130,8 @@
             </div>
         </div>
     </section>
+    <!--======================================================-->
+
     <section class="categories-info">
         <div class="categories-info__inner">
             <div class="container">
@@ -196,6 +198,30 @@
                             <a class="categories__item-link" href="#">EXPLORE MORE</a></div>
 
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--======================================================-->
+    <section class="video-fashion">
+        <div class="container">
+            <div class="video-fashion__inner">
+                <div class="video-fashion__popup" style="background-image:url('images/content/video/video-fashion.jpg');">
+                    <a class="video-fashion__play"
+                       href="https://www.youtube.com/watch?v=PxdKQP3-AK8"
+                       data-fancybox>
+                        <img src="images/icons/play-btn.svg" alt="video-play">
+                    </a>
+                </div>
+                <div class="video-fashion__content">
+                    <p class="video-fashion__subtitle">Winter Collection 20% Off</p>
+                    <h3 class="tittle video-fashion__tittle">TRENDING FASHION</h3>
+                    <p class="video-fashion__text">
+                        Lorem ipsum dolor sit amet, consectetur apiscing elit, sed do eiusmod temp incididunt ut labore et dolore magna aliqua consectetur adipiscing elit, sedu do eiusmod temp indidunt ut labore et dolore magna aliqua.. Quis ipsum de ultcesm. Risus commodo viverra maecenas.
+                    </p>
+                    <a href="" class="video-fashion__link">
+                        View Now
+                    </a>
                 </div>
             </div>
         </div>
