--- a/app/index.html
+++ b/app/index.html
@@ -476,24 +476,24 @@
                     DEAL OF THE DAY
                 </h3>
 
-            <div class="promo__clock" data-time="'2024-09-30'">
-                <div class="promo__clock-item">
-                    <span class="promo__days"></span>
-                    <div class="promo__text">Days</div>
+                <div class="promo__clock" data-time="'2024-09-30'">
+                    <div class="promo__clock-item">
+                        <span class="promo__days"></span>
+                        <div class="promo__text">Days</div>
+                    </div>
+                    <div class="promo__clock-item">
+                        <span class="promo__hours"></span>
+                        <div class="promo__text">Hours</div>
+                    </div>
+                    <div class="promo__clock-item">
+                        <span class="promo__minutes"></span>
+                        <div class="promo__text">Minutes</div>
+                    </div>
+                    <div class="promo__clock-item">
+                        <span class="promo__seconds"></span>
+                        <div class="promo__text">Seconds</div>
+                    </div>
                 </div>
-                <div class="promo__clock-item">
-                    <span class="promo__hours"></span>
-                    <div class="promo__text">Hours</div>
-                </div>
-                <div class="promo__clock-item">
-                    <span class="promo__minutes"></span>
-                    <div class="promo__text">Minutes</div>
-                </div>
-                <div class="promo__clock-item">
-                    <span class="promo__seconds"></span>
-                    <div class="promo__text">Seconds</div>
-                </div>
-            </div>
 
                 <a class="promo__link" href="#">
                     SHOP NOW
@@ -526,6 +526,68 @@
 
         </div>
     </div>
+    <!--======================================================-->
+    <section class="blog">
+        <div class="container">
+            <h3 class="tittle">From Our Blog</h3>
+            <p class="text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodmoe tempor incididunt ut labore
+                et dolore aliqua.
+            </p>
+            <div class="blog__items">
+                <div class="blog__item">
+                    <a class="blog__item-imgLink" href="#">
+                        <img class="blog__item-img" src="images/blog/1.jpg" alt="">
+                    </a>
+                    <div class="blog__item-box">
+                        <div class="blog__item-info">
+                            <a class="blog__item-author" href="#">By Admin</a>
+                            <div class="blog__item-date">10 January, 2025</div>
+                        </div>
+                        <a class="blog__item-titleLink" href="#">
+                            <h4 class="blog__item-title">Our Apps User Use Mobile On His Mobile</h4>
+                        </a>
+                        <a class="blog__item-link" href="#">Read More</a>
+                    </div>
+
+                </div>
+
+                <div class="blog__item">
+                    <a class="blog__item-imgLink" href="#">
+                        <img class="blog__item-img" src="images/blog/2.jpg" alt="">
+                    </a>
+                    <div class="blog__item-box">
+                        <div class="blog__item-info">
+                            <a class="blog__item-author" href="#">By Admin</a>
+                            <div class="blog__item-date">10 January, 2025</div>
+                        </div>
+                        <a class="blog__item-titleLink" href="#">
+                            <h4 class="blog__item-title">Our Apps User Use Mobile On His Mobile</h4>
+                        </a>
+                        <a class="blog__item-link" href="#">Read More</a>
+                    </div>
+
+
+                </div>
+                <div class="blog__item">
+                    <a class="blog__item-imgLink" href="#">
+                        <img class="blog__item-img" src="images/blog/3.jpg" alt="">
+                    </a>
+                    <div class="blog__item-box">
+                        <div class="blog__item-info">
+                            <a class="blog__item-author" href="#">By Admin</a>
+                            <div class="blog__item-date">10 January, 2025</div>
+                        </div>
+                        <a class="blog__item-titleLink" href="#">
+                            <h4 class="blog__item-title">Our Apps User Use Mobile On His Mobile</h4>
+                        </a>
+                        <a class="blog__item-link" href="#">Read More
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!--======================================================-->
 
 </main>
