--- a/app/login.html
+++ b/app/login.html
@@ -89,6 +89,32 @@
             </div>
         </div>
     </section>
+    <!--======================================================-->
+    <section class="modal">
+        <div class="container">
+            <div class="modal__links">
+                <a class="modal__link" href="#">REGISTER</a>
+                <a class="modal__link modal__link-active " href="#">LOGIN</a>
+            </div>
+            <form action="" class="modal__form">
+                <label class="modal__label">
+                    Username or email address*
+                    <input class="modal__input" type="text" required/>
+                </label>
+                <label class="modal__label">
+                    Password*
+                    <input class="modal__input" type="password" required/>
+                </label>
+                <label class="modal__label">
+                    <input  type="checkbox" />
+                    Remember me
+                </label>
+                <button class="modal__btn" type="submit">LOG IN</button>
+                <a class="modal__err" href="#">Lost your password?</a>
+            </form>
+        </div>
+    </section>
+    <!--======================================================-->
 
 </main>
 
@@ -112,8 +138,8 @@
                 <ul class="footer-top__social-list">
                     <li class="footer-top__social-item">
                         <a class="footer-top__social-link" href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                 width="11px" height="18px" viewBox="0 0 11 17" version="1.1">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 width="11px" height="18px" viewBox="0 0 11 17" >
                                 <g>
                                     <path
                                             d="M 2.75 9.9375 L 2.75 17 L 6.738281 17 L 6.738281 9.9375 L 9.710938 9.9375 L 10.328125 6.691406 L 6.738281 6.691406 L 6.738281 5.542969 C 6.738281 3.824219 7.433594 3.167969 9.238281 3.167969 C 9.796875 3.167969 10.246094 3.179688 10.507812 3.207031 L 10.507812 0.261719 C 10.015625 0.132812 8.8125 0 8.121094 0 C 4.445312 0 2.75 1.675781 2.75 5.292969 L 2.75 6.691406 L 0.480469 6.691406 L 0.480469 9.9375 Z M 2.75 9.9375 "/>
@@ -123,8 +149,8 @@
                     </li>
                     <li class="footer-top__social-item">
                         <a class="footer-top__social-link" href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                 width="18px" height="18px" viewBox="0 0 18 18" version="1.1">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 width="18px" height="18px" viewBox="0 0 18 18" >
                                 <g>
                                     <path
                                             d="M 16.152344 5.332031 C 16.160156 5.492188 16.160156 5.652344 16.160156 5.8125 C 16.160156 10.6875 12.449219 16.308594 5.664062 16.308594 C 3.570312 16.308594 1.632812 15.703125 0 14.652344 C 0.296875 14.6875 0.582031 14.699219 0.890625 14.699219 C 2.617188 14.699219 4.199219 14.113281 5.46875 13.125 C 3.851562 13.089844 2.488281 12.027344 2.023438 10.5625 C 2.25 10.597656 2.476562 10.621094 2.71875 10.621094 C 3.046875 10.621094 3.378906 10.574219 3.6875 10.492188 C 1.996094 10.152344 0.730469 8.664062 0.730469 6.871094 L 0.730469 6.828125 C 1.222656 7.101562 1.792969 7.273438 2.398438 7.292969 C 1.402344 6.632812 0.753906 5.5 0.753906 4.222656 C 0.753906 3.535156 0.933594 2.90625 1.253906 2.359375 C 3.074219 4.597656 5.800781 6.0625 8.863281 6.21875 C 8.808594 5.945312 8.773438 5.660156 8.773438 5.375 C 8.773438 3.34375 10.417969 1.6875 12.460938 1.6875 C 13.519531 1.6875 14.480469 2.132812 15.15625 2.851562 C 15.988281 2.691406 16.789062 2.382812 17.496094 1.960938 C 17.222656 2.820312 16.640625 3.535156 15.875 3.992188 C 16.617188 3.914062 17.339844 3.707031 18 3.425781 C 17.496094 4.15625 16.867188 4.804688 16.152344 5.332031 Z M 16.152344 5.332031 "/>
@@ -134,8 +160,8 @@
                     </li>
                     <li class="footer-top__social-item">
                         <a class="footer-top__social-link" href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                 width="16px" height="18px" viewBox="0 0 16 18" version="1.1">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 width="16px" height="18px" viewBox="0 0 16 18" >
                                 <g>
                                     <path
                                             d="M 3.582031 15.75 L 0.265625 15.75 L 0.265625 5.234375 L 3.582031 5.234375 Z M 1.921875 3.800781 C 0.859375 3.800781 0 2.9375 0 1.890625 C 0 0.847656 0.859375 0 1.921875 0 C 2.984375 0 3.84375 0.847656 3.84375 1.890625 C 3.84375 2.9375 2.980469 3.800781 1.921875 3.800781 Z M 15.996094 15.75 L 12.6875 15.75 L 12.6875 10.632812 C 12.6875 9.410156 12.660156 7.847656 10.960938 7.847656 C 9.234375 7.847656 8.972656 9.171875 8.972656 10.542969 L 8.972656 15.75 L 5.65625 15.75 L 5.65625 5.234375 L 8.839844 5.234375 L 8.839844 6.667969 L 8.886719 6.667969 C 9.328125 5.84375 10.410156 4.972656 12.023438 4.972656 C 15.382812 4.972656 16 7.148438 16 9.972656 L 16 15.75 Z M 15.996094 15.75 "/>
@@ -145,8 +171,8 @@
                     </li>
                     <li class="footer-top__social-item">
                         <a class="footer-top__social-link" href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                 width="17px" height="18px" viewBox="0 0 17 17" version="1.1">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 width="17px" height="18px" viewBox="0 0 17 17" >
                                 <g>
                                     <path
                                             d="M 17 8.691406 C 17 13.390625 13.625 16.734375 8.640625 16.734375 C 3.859375 16.734375 0 13.054688 0 8.5 C 0 3.945312 3.859375 0.265625 8.640625 0.265625 C 10.964844 0.265625 12.925781 1.078125 14.433594 2.421875 L 12.082031 4.574219 C 9.003906 1.746094 3.285156 3.871094 3.285156 8.5 C 3.285156 11.371094 5.691406 13.699219 8.640625 13.699219 C 12.058594 13.699219 13.34375 11.363281 13.542969 10.148438 L 8.640625 10.148438 L 8.640625 7.316406 L 16.863281 7.316406 C 16.945312 7.738281 17 8.144531 17 8.691406 Z M 17 8.691406 "/>
@@ -156,8 +182,8 @@
                     </li>
                     <li class="footer-top__social-item">
                         <a class="footer-top__social-link" href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                 width="12px" height="16px" viewBox="0 0 12 16" version="1.1">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 width="12px" height="16px" viewBox="0 0 12 16">
                                 <g>
                                     <path
                                             d="M 6.375 0.203125 C 3.167969 0.203125 0 2.339844 0 5.800781 C 0 8 1.238281 9.25 1.988281 9.25 C 2.296875 9.25 2.476562 8.386719 2.476562 8.144531 C 2.476562 7.851562 1.734375 7.234375 1.734375 6.023438 C 1.734375 3.511719 3.648438 1.730469 6.121094 1.730469 C 8.25 1.730469 9.824219 2.941406 9.824219 5.164062 C 9.824219 6.820312 9.160156 9.933594 7.003906 9.933594 C 6.226562 9.933594 5.558594 9.371094 5.558594 8.566406 C 5.558594 7.382812 6.382812 6.242188 6.382812 5.023438 C 6.382812 2.953125 3.449219 3.328125 3.449219 5.828125 C 3.449219 6.351562 3.515625 6.933594 3.75 7.414062 C 3.320312 9.269531 2.4375 12.035156 2.4375 13.945312 C 2.4375 14.539062 2.523438 15.117188 2.578125 15.710938 C 2.683594 15.828125 2.632812 15.816406 2.792969 15.757812 C 4.367188 13.601562 4.3125 13.179688 5.023438 10.355469 C 5.410156 11.085938 6.402344 11.480469 7.191406 11.480469 C 10.507812 11.480469 12 8.246094 12 5.332031 C 12 2.226562 9.320312 0.203125 6.375 0.203125 Z M 6.375 0.203125 "/>
